Proj/dev-0716/log/build_2024-11-17_00-10-03/mqtt_client/stderr.log
  File "/desktop/AMR_Proj/Proj/dev-0716/install/mqtt_client/lib/python3.8/site-packages/mqtt_client/mqtt_client.py", line 40
    `    # 데이터 포맷 구성
    ^
SyntaxError: invalid syntax

